--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>Admin Dashboard </title>
 </head>
@@ -79,7 +80,7 @@
                                 <tbody class="tbody">
                                     <tr class="table-primary table-bordered">
                                         <td scope="row">1</td>
-                                        <td><img class="avatar" src="https://picsum.photos/id/4/40/40" alt="avatar"> Azamat Axrorov</td>
+                                        <td><img class="avatar" src="https://picsum.photos/id/4/40/40" alt="avatar"> Asadbek Axmadqulov</td>
                                         <td>100</td>
                                         <td><button class="btn btn-dark">Edit</button></td>
                                         <td><button class="btn btn-danger">Delete</button></td>
